   attempt.
 * Fix a bug with use-qt-builddir-hack that caused it to affect all modules
   during the build system setup instead of just qt-copy.
 * Don't add 'global' to the log directory path if we're getting the global
   log directory.
 * Script now informs you of your log directory at the end of the script run.
 * Fix infinite loop when you've disable automatic module install.

Version history: 0.72
 * qt-copy bugfix #6564: There's no reason to try to download the admin dir
   for qt-copy.
 * The workaround in 0.70 for the autorebuilding bug caused a bug of its own,
   for which I apologize.  Both bugs should now be fixed.
 * kde-common is no longer required to support checkout-only, and will no
   longer be automatically downloaded.  It will still be downloaded if you
   place it in your .kdecvs-buildrc.
 * qt-copy bugfix #2312: Although the last attempt to reconfigure qt-copy was
   inspired, it was ultimately flawed due to programmer incompetence.
 * Rearrange startup sequence a little bit so that you can pass command-line
   options like -v and -h to the program without having to have a configuration
   file.

Version history: 0.71
 * qt-copy bugfix #2342: Force configure to run if qt-copy hasn't been
   configured.
 * Added use-qt-builddir-hack option.
 * Accept GPL license by default for qt-copy.
 * Debug mode improvements.
 * Better script header documentation.
 * Symlink to latest log directory.
 * Check if admin dir has downloaded, and if not, make it do so.

Version history: 0.70
 * Fix the --no-build option.
 * Add the stop-after-failure config file option.
 * The script now comes in its own directory instead of messing up your pwd.
 * Fix handling of the /admin directory on modules where checkout-only is set,
   but had already been checked out.
 * Workaround bug in autorebuilding for qt-copy until I figure out what's
   going on.

Version history: 0.66
 * Make sure UNSERMAKE isn't defined if the module says not to use unsermake.