@@ -65,7 +65,7 @@ those who either can't or don't feel like installing it.</p>
 <p>It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Jun-15:</b> v0.73<br />
+<p><b>2004-Jun-15:</b> v$VERSION<br />
 Bugfixes:
 <ul>
 <li>The <a href="#conf-no-rebuild-on-fail">no-rebuild-on-fail</a>
@@ -734,6 +734,18 @@ without cleaning the build directory.</li>
 Makefile.cvs</code> again to create the configure script, and continue
 building as normal.  This option implies --reconfigure.</li>
 
+<li id="cmdline-resume">--resume, which tries to continue building from where
+the script stopped last time.  The script starts building the module after the
+last module to be compiled last time the script was run, whether or not it
+succeeded.  This option implies <a href="#cmdline-no-cvs">--no-cvs</a>.  You
+should not specify other module names on the command line.</li>
+
+<li id="cmdline-resume-from">--resume-from, which is like <a
+href="#cmdline-resume">--resume</a>, except that you supply the module to
+start building from as the next parameter on the command line.  This option
+implies <a href="#cmdline-no-cvs">--no-cvs</a>.  You should not specify
+other module names on the command line.</li>
+
 <li id="cmdline-build-system-only">--build-system-only, Stop after runnning
 make -f Makefile.cvs.  The configure script will still need to be run, which
 kdecvs-build will do next time.  This lets you prepare all the configure
@@ -764,7 +776,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Tue Jun 15 00:48:52 2004</font>
+Last modified: Tue Jun 15 02:27:06 2004</font>
 </div>
 </body>
 </html>
