@@ -13,6 +13,7 @@ Version history: 0.73
    log directory.
  * Script now informs you of your log directory at the end of the script run.
  * Fix infinite loop when you've disable automatic module install.
+ * Added --resume and --resume-from options.
 
 Version history: 0.72
  * qt-copy bugfix #6564: There's no reason to try to download the admin dir
